Fix color contrast

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -149,8 +149,7 @@ strong, b {
       width: 2.8em;
       height: 2.8em;
       display: inline-block;
-      filter: invert(45%) sepia(84%) saturate(1511%) hue-rotate(183deg) brightness(100%) contrast(90%);
-
+      filter: invert(29%) sepia(80%) saturate(1573%) hue-rotate(185deg) brightness(102%) contrast(103%);
 
       &--twitter {background-image: url('/assets/icons/twitter.svg');}
       &--linkedin {background-image: url('/assets/icons/linkedin.svg');}
