--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,12 +1,12 @@
 $background-color: #FFFFFF;
 $text-color: #2F2F2F;
-$lighter-text-color: #7A7A7A;
+$lighter-text-color: #767676;
 
 $line-height: 1.7em;
 $font-size: 18px;
 
 $column-width: 720px;
 
-$primary-color: #2799F1;
-$secondary-color: #FF9D1A;
-$optional-color: #8AC926;
+$primary-color: #0078d4;
+$secondary-color: #af6400;
+$optional-color: #518400;
